pk: Try to detect if a local file we are trying to install already is installed

So that maybe it can be marked as such when the file gets opened

BUG: 443612